--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "expo-status-bar": "~1.6.0",
     "jsonwebtoken": "^9.0.2",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-image-picker": "^7.0.2",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
